--- a/SMS.Web/Views/BringIn/Approve.cshtml
+++ b/SMS.Web/Views/BringIn/Approve.cshtml
@@ -32,27 +32,7 @@
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Phòng ban</label>
             &nbsp;
-            <select class="form-control from-date">
-                <option value="0">---All---</option>
-                <option value="1">BOM</option>
-                <option value="2">ACT</option>
-                <option value="3">FST</option>
-                <option value="4">GAT</option>
-                <option value="5">HRT</option>
-                <option value="6">ITT</option>
-                <option value="7">MAT</option>
-                <option value="8">MCT</option>
-                <option value="9">MET</option>
-                <option value="10">MMT</option>
-                <option value="11">MQT</option>
-                <option value="12">MTT</option>
-                <option value="13">PDT</option>
-                <option value="14">PUT</option>
-                <option value="15">QAT</option>
-                <option value="16">SCT</option>
-                <option value="17">SMT</option>
-                <option value="18">SQT</option>
-            </select>
+            <input id="team" class="form-control bg-light to-date">
         </div>
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Mã nhân viên</label>
@@ -66,7 +46,7 @@
 
     <div style="margin-top: 8px">
         <div class="button-container" style="float: left">
-            <a class="btn btn-sm btn-success"><i class="fas fa-sync"></i> Tải lại</a>
+            <a class="btn btn-sm btn-success btn-reload"><i class="fas fa-sync"></i> Tải lại</a>
         </div>
         <div style="float: right">
             <form class="radio-container">
@@ -111,7 +91,6 @@
                 <th class="th-1">Thời gian ước tính</th>
                 <th class="th-1">Trạng thái</th>
                 <th class="th-1">Chi tiết</th>
-                <th class="th-1">In ấn</th>
                 <th class="th-1">Người tạo</th>
                 <th class="th-1">Chỉnh sửa</th>
             </tr>
@@ -122,6 +101,10 @@
 
 @section scripts{
     <script src="~/Assets/js/jquery.dataTables.min.js"></script>
+    <script src="~/Assets/js/jquery.timepicker.min.js"></script>
+    <script src="~/Assets/js/jquery-confirm.js"></script>
+    <script src="~/Assets/js/bring_in/common.js"></script>
+
     <script>
         $(document).ready(() => {
             //document.getElementById('approve-table_length').remove();
@@ -135,7 +118,6 @@
                 "oLanguage": {
                     "sLengthMenu": "_MENU_"
                 },
-                //"lengthMenu": [[10, 25, 50, 100, -1], [10, 25, 50, 100, "All"]],
                 "pageLength": 20,
                 "lengthChange": false,
                 "ajax": {
@@ -158,7 +140,7 @@
                     { data: function (res) { return res.Position; } },
                     { data: function (res) { return res.Team; } },
                     { data: function (res) { return res.Reason; } },
-                    { data: function (res) { return `<span class="border-right" style="padding-right:10px;">${res.EstimatedDate}</span><span style="margin-left:10px;">${res.EstimatedTime}</span>`} },
+                    { data: function (res) { return `<span class="border-right" style="padding-right:10px;">${res.EstimatedDate}</span><span style="margin-left:10px;">${res.EstimatedTime}</span>` } },
                     {
                         data: function (res) {
                             return !res.Status ? 'Đang thực hiện' : 'Đã thực hiện';
@@ -172,18 +154,10 @@
                     },
                     {
                         data: function (res) {
-                            return `<button class="btn btn-print btn-primary btn-standard" id="btnPrint" title="In báo cáo">
-                                                        <i class="fas fa-print" style="margin-left:-3.5px;"></i>
-                                                    </button>`;
-                        }
-                    },
-                    {
-                        data: function (res) {
-                            var createdUser = "";
                             if (res.CreatedDate === null || res.CreatedDate === "" || typeof (res.CreatedDate) === "undefined")
                                 return "";
                             var date = new Date(parseInt(res.CreatedDate.replace(/[^0-9 +]/g, '')));
-                            var createdDate = `${date.getDate()}/${date.getMonth() + 1}/${date.getFullYear()}`;
+                            var createdDate = `${date.getDate()}/${date.getMonth() + 1}/${date.getFullYear()} | ${date.getHours()}:${date.getMinutes()}:${date.getSeconds()}`;
                             return `<span class="border-right" style="padding-right:10px;">${res.CreatedBy}</span><span style="margin-left:10px;">${createdDate}</span>`;
                         }
                     },
@@ -192,9 +166,8 @@
                             if (res.ModifiedDate === null || res.ModifiedDate === "" || typeof (res.ModifiedDate) === "undefined")
                                 return "";
                             var date = new Date(parseInt(res.ModifiedDate.replace(/[^0-9 +]/g, '')));
-                            var modifiedDate = `${date.getDate()}/${date.getMonth() + 1}/${date.getFullYear()}`;
-
-                            return `${res.ModifiedBy} | ${modifiedDate}`;
+                            var modifiedDate = `${date.getDate()}/${date.getMonth() + 1}/${date.getFullYear()} | ${date.getHours()}:${date.getMinutes()}:${date.getSeconds()}`;
+                            return `<span class="border-right" style="padding-right:10px;">${res.ModifiedBy}</span ><span style="margin-left:10px;">${modifiedDate}</span>`;
                         }
                     }
                 ]
@@ -206,6 +179,13 @@
         });
 
         $('#date_from, #date_to').datepicker().datepicker("setDate", new Date());
+
+        $("#BI").removeClass('collapse');
+        $("#BI").removeClass('collapsed');
+        $("#BI").attr("aria-expanded", "true");
+        $("#BIApprove").addClass('active');
+        $("#collapseBringIn").addClass('show');
+        $("#collapseInOut").removeClass('collapse');
     </script>
 }
 
