--- a/SMS.Web/Views/BringIn/FSTApprove.cshtml
+++ b/SMS.Web/Views/BringIn/FSTApprove.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "FST Approve";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -25,27 +24,7 @@
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Phòng ban</label>
             &nbsp;
-            <select class="form-control from-date">
-                <option value="0">---All---</option>
-                <option value="1">BOM</option>
-                <option value="2">ACT</option>
-                <option value="3">FST</option>
-                <option value="4">GAT</option>
-                <option value="5">HRT</option>
-                <option value="6">ITT</option>
-                <option value="7">MAT</option>
-                <option value="8">MCT</option>
-                <option value="9">MET</option>
-                <option value="10">MMT</option>
-                <option value="11">MQT</option>
-                <option value="12">MTT</option>
-                <option value="13">PDT</option>
-                <option value="14">PUT</option>
-                <option value="15">QAT</option>
-                <option value="16">SCT</option>
-                <option value="17">SMT</option>
-                <option value="18">SQT</option>
-            </select>
+            <input id="team" class="form-control bg-light to-date">
         </div>
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Mã nhân viên</label>
@@ -59,7 +38,7 @@
 
     <div style="margin-top: 8px">
         <div class="button-container" style="float: left">
-            <a class="btn btn-sm btn-success"><i class="fas fa-sync"></i> Tải lại</a>
+            <a class="btn btn-sm btn-success btn-reload"><i class="fas fa-sync"></i> Tải lại</a>
         </div>
         <div style="float: right">
             <form class="radio-container">
@@ -92,7 +71,7 @@
 
 <div style="width:100%; overflow-x:auto">
     <!--Bảng dữ liệu Về sớm-->
-    <table class="table table-hover table-bordered" id="approve-table">
+    <table class="table table-hover table-bordered" id="approve-table" style="width: 100%">
         <!--Tiêu đề cột-->
         <thead>
             <tr class="table-heading">
@@ -104,7 +83,6 @@
                 <th class="th-1">Thời gian ước tính</th>
                 <th class="th-1">Trạng thái</th>
                 <th class="th-1">Chi tiết</th>
-                <th class="th-1">In ấn</th>
                 <th class="th-1">Người tạo</th>
                 <th class="th-1">Chỉnh sửa</th>
             </tr>
@@ -117,6 +95,7 @@
     <script src="~/Assets/js/jquery.dataTables.min.js"></script>
     <script src="~/Assets/js/jquery.timepicker.min.js"></script>
     <script src="~/Assets/js/jquery-confirm.js"></script>
+    <script src="~/Assets/js/bring_in/common.js"></script>
 
     <script>
         $(document).ready(() => {
@@ -153,7 +132,11 @@
                     { data: function (res) { return res.Position; } },
                     { data: function (res) { return res.Team; } },
                     { data: function (res) { return res.Reason; } },
-                    { data: function (res) { return res.EstimatedDate; } },
+                    {
+                        data: function (res) {
+                            return `<span class="border-right" style="padding-right:10px;">${res.EstimatedDate}</span><span style="margin-left:10px;">${res.EstimatedTime}</span>`;
+                        }
+                    },
                     {
                         data: function (res) {
                             return !res.Status ? 'Đang thực hiện' : 'Đã thực hiện';
@@ -167,23 +150,11 @@
                     },
                     {
                         data: function (res) {
-                            return `<button class="btn btn-print btn-primary btn-standard" id="btnPrint" title="In báo cáo">
-                                                        <i class="fas fa-print" style="margin-left:-3.5px;"></i>
-                                                    </button>`;
-                        }
-                    },
-                    {
-                        data: function (res) {
-                            var createdUser = "";
-                            //$.ajax({
-                            //    url: '/User/GetUserByCode?empCode=' + res.CreatedBy,
-                            //    type: "GET",
-                            //    dataType: 'json',
-                            //    success: (reponse) => {
-                            //        createdUser = reponse.data.FullName;
-                            //    }
-                            //});
-                            return `<span class="border-right" style="padding-right:10px;">${res.CreatedBy}</span><span style="margin-left:10px;">${createdUser}</span>`;
+                            if (res.CreatedDate === null || res.CreatedDate === "" || typeof (res.CreatedDate) === "undefined")
+                                return "";
+                            var date = new Date(parseInt(res.CreatedDate.replace(/[^0-9 +]/g, '')));
+                            var createdDate = `${date.getDate()}/${date.getMonth() + 1}/${date.getFullYear()} | ${date.getHours()}:${date.getMinutes()}:${date.getSeconds()}`;
+                            return `<span class="border-right" style="padding-right:10px;">${res.CreatedBy}</span><span style="margin-left:10px;">${createdDate}</span>`;
                         }
                     },
                     {
@@ -191,9 +162,8 @@
                             if (res.ModifiedDate === null || res.ModifiedDate === "" || typeof (res.ModifiedDate) === "undefined")
                                 return "";
                             var date = new Date(parseInt(res.ModifiedDate.replace(/[^0-9 +]/g, '')));
-                            var modifiedDate = `${date.getDate()}/${date.getMonth() + 1}/${date.getFullYear()}`;
-
-                            return `${res.ModifiedBy} | ${modifiedDate}`;
+                            var modifiedDate = `${date.getDate()}/${date.getMonth() + 1}/${date.getFullYear()} | ${date.getHours()}:${date.getMinutes()}:${date.getSeconds()}`;
+                            return `<span class="border-right" style="padding-right:10px;">${res.ModifiedBy}</span ><span style="margin-left:10px;">${modifiedDate}</span>`;
                         }
                     }
                 ]
@@ -207,6 +177,13 @@
         });
 
         $('#date_from, #date_to').datepicker().datepicker("setDate", new Date());
+
+        $("#BI").removeClass('collapse');
+        $("#BI").removeClass('collapsed');
+        $("#BI").attr("aria-expanded", "true");
+        $("#BIfst").addClass('active');
+        $("#collapseBringIn").addClass('show');
+        $("#collapseInOut").removeClass('collapse');
     </script>
 }
 
