--- a/SMS.Web/Views/BringOut/Create.cshtml
+++ b/SMS.Web/Views/BringOut/Create.cshtml
@@ -36,20 +36,7 @@
                 </div>
                 <label class="top-space" for="EstimatedTime">Giờ đăng ký <span class="red">(*)</span></label>
                 <div class="col-2 input-group-sm">
-                    <input class="form-control input-previous-button timepicker" id="estimated_time" placeholder="Giờ" readonly/>
-                </div>
-            </div>
-
-            <div class="input-group input-group-sm">
-                <div class="col-2"></div>
-                <div class="file row col-10 input-group-sm">
-                    <label class="col-3">
-                        <a class="btn btn-success btn-sm" style="cursor: pointer"><i class="fas fa-download"></i> Tải mẫu đăng ký</a>
-                    </label>
-                    <div class="col-8 custom-file">
-                        <input class="form-control input-previous-button custom-file-input input-group-sm" id="temp-file" type="file" />
-                        <label class="custom-file-label" for="temp-file">Chọn file</label>
-                    </div>
+                    <input class="form-control input-previous-button timepicker" id="estimated_time" placeholder="Giờ" readonly />
                 </div>
             </div>
         </div>
@@ -139,7 +126,7 @@
                             <input class="form-control datepicker returnDate" placeholder="Ngày" readonly/>
                         </td>
                         <td class="input-group-sm">
-                            <input class="form-control timepicker returnTime" placeholder="Giờ" readonly/>
+                            <input class="form-control timepicker returnTime" placeholder="Giờ" readonly />
                         </td>
                     </tr>
                 </tbody>
@@ -194,7 +181,7 @@
                                 <input class="form-control datepicker returnDate" placeholder="Ngày" readonly/>
                             </td>
                             <td class="input-group-sm">
-                                <input class="form-control timepicker returnTime" placeholder="Giờ" readonly/>
+                                <input class="form-control timepicker returnTime" placeholder="Giờ" readonly />
                             </td>
                         </tr>`;
             $('#BO-items > tbody:last-child').append(html);
@@ -229,7 +216,7 @@
 
         $('.timepicker').timepicker({
             timeFormat: 'h:mm p',
-            interval: 15,
+            interval: 5,
             startTime: '00:00',
             dynamic: false,
             dropdown: true,
@@ -246,6 +233,13 @@
                 $('#txtTeamBO').val("");
             }
         });
+
+        $("#BO").removeClass('collapse');
+        $("#BO").removeClass('collapsed');
+        $("#BO").attr("aria-expanded", "true");
+        $("#BOCreate").addClass('active');
+        $("#collapseBringOut").addClass('show');
+        $("#collapseInOut").removeClass('collapse');
     </script>
     <script src="~/Assets/js/bring_out/common.js"></script>
 }
