--- a/SMS.Web/Views/BringOut/Edit.cshtml
+++ b/SMS.Web/Views/BringOut/Edit.cshtml
@@ -44,22 +44,6 @@
                     <input type="hidden" id="txtCreatedDate" value="@Model.CreatedDate" />
                 </div>
             </div>
-
-            <div class="input-group input-group-sm">
-                <div class="col-2"></div>
-                <label class="col-2">
-                    <a class="btn btn-primary btn-sm" style="cursor: pointer" data-toggle="collapse" data-target=".bottom">Đăng ký tài sản</a>
-                </label>
-                <div class="file row col-8 input-group-sm">
-                    <label class="col-4">
-                        <a class="btn btn-success btn-sm" style="cursor: pointer"><i class="fas fa-download"></i> Tải mẫu đăng ký</a>
-                    </label>
-                    <div class="col-8 custom-file">
-                        <input class="form-control input-previous-button custom-file-input input-group-sm" id="temp-file" type="file" />
-                        <label class="custom-file-label" for="temp-file">Chọn file</label>
-                    </div>
-                </div>
-            </div>
         </div>
 
         <div class="column col-md-1 col-mid"></div>
@@ -178,7 +162,7 @@
             <i class="fas fa-plus"></i>&nbsp; Thêm tài sản
         </label>
         <button id="register" class="btn-success btn btn-sm" type="submit" title="Đăng ký mang hàng vào" style="cursor: pointer">
-            <i class="fas fa-edit"></i>&nbsp; Đăng ký
+            <i class="fas fa-edit"></i>&nbsp; Cập nhật
         </button>
     </div>
 </div>
@@ -315,8 +299,14 @@
                 }
             })
 
-        })
+        });
 
+        $("#BO").removeClass('collapse');
+        $("#BO").removeClass('collapsed');
+        $("#BO").attr("aria-expanded", "true");
+        $("#BOHistory").addClass('active');
+        $("#collapseBringOut").addClass('show');
+        $("#collapseInOut").removeClass('collapse');
     </script>
 
 }
