--- a/SMS.Web/Views/Guard/Queue.cshtml
+++ b/SMS.Web/Views/Guard/Queue.cshtml
@@ -116,9 +116,9 @@
                             <td>@item.GuardDate</td>
                             <td>@item.GuardRemark</td>
                             <td>
-                                <button class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
+                                <a href="/LeaveEarly/LEReport/@item.ID" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
-                                </button>
+                                </a>
                             </td>
                         </tr>
                     }
