--- a/SMS.Web/Views/Guest/History.cshtml
+++ b/SMS.Web/Views/Guest/History.cshtml
@@ -33,27 +33,7 @@
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Phòng ban</label>
             &nbsp;
-            <select class="form-control from-date">
-                <option value="0">---Chọn---</option>
-                <option value="1">BOM</option>
-                <option value="2">ACT</option>
-                <option value="3">FST</option>
-                <option value="4">GAT</option>
-                <option value="5">HRT</option>
-                <option value="6">ITT</option>
-                <option value="7">MAT</option>
-                <option value="8">MCT</option>
-                <option value="9">MET</option>
-                <option value="10">MMT</option>
-                <option value="11">MQT</option>
-                <option value="12">MTT</option>
-                <option value="13">PDT</option>
-                <option value="14">PUT</option>
-                <option value="15">QAT</option>
-                <option value="16">SCT</option>
-                <option value="17">SMT</option>
-                <option value="18">SQT</option>
-            </select>
+            <input class="form-control bg-light to-date" />
         </div>
         <div class="col-2 input-group input-group-sm">
             <label class="no-margin-bottom" style="padding-top: 5px">Mã nhân viên</label>
@@ -271,5 +251,12 @@
         });
 
         $('#date_from, #date_to').datepicker().datepicker("setDate", new Date());
+
+        $("#guest").removeClass('collapse');
+        $("#guest").removeClass('collapsed');
+        $("#guest").attr("aria-expanded", "true");
+        $("#guest-history").addClass('active');
+        $("#collapseGuest").addClass('show');
+        $("#collapseInOut").removeClass('collapse');
     </script>
 }
